--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^14.2.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.6.0"
   }
 }
